<resources>
    <string name="app_name">EverTranslator</string>

    <string name="channel_default">Default notification channel</string>

    <string name="version_history_url">https://firemaples.github.io/EverTranslator/version_history.html</string>

    <string name="translation_provider_microsoft_azure">Microsoft Azure</string>
    <string name="translation_provider_google_ml_kit">Google MLKit</string>
    <string name="translation_provider_my_memory" translatable="false">MyMemory</string>
    <string name="translation_provider_google_translate_app">Google Translate App</string>
    <string name="translation_provider_Bing_translate_app">Microsoft Translator App</string>
    <string name="translation_provider_Papago_translate_app">Papago Translator App</string>
    <string name="translation_provider_yandex_translate_app">Yandex Translate App</string>
    <string name="translation_provider_other_translate_app">Other translator App</string>
    <string name="translation_provider_none">OCR only</string>
    <string name="ocr_provider_google_ml_kit">Google MLKit (Recommended)</string>
    <string name="ocr_provider_tesseract">Tesseract</string>

    <string name="pref_title_use_simple_style">Use simple style</string>
    <string name="pref_summary_use_simple_style">Simple style:\nUses only one button to minimize the floating bar, click it for finding texts, long-press it for displaying menu, drag it to move.\n\nFull style:\nDisplays two buttons, one for finding texts, another one for showing menu and moving by dragging it.</string>
    <string name="pref_title_enable_fade_out_while_idle">Enable fade out while idle</string>
    <string name="pref_title_fade_out_after_seconds">Fade out after (seconds)</string>
    <string name="pref_title_opaque_percentage">Opaque percentage (%)</string>
    <string name="pref_category_floating_bar">Floating bar</string>
    <string name="pref_category_text_blocks_selector">Text blocks selector</string>
    <string name="pref_joiner_between_text_blocks">Joiner between text blocks</string>
    <string name="pref_other_settings">Other settings</string>
    <string name="pref_save_last_selected_area">Save last selected area</string>
    <string name="pref_exit_app_while_spen_inserted">Exit app while S Pen Inserted (Samsung only)</string>
    <string name="pref_member_last_main_bar_position">Remember the last main bar position</string>
    <string name="pref_result_panel">Result panel</string>
    <string name="pref_auto_copy_the_recognized_result">Auto copy the recognized result</string>
    <string name="pref_hide_recognized_result_after_translated">Hide recognized result after translated</string>
    <string name="pref_category_text_recognition">Text Recognition</string>
    <string name="pref_capturing_screen_timeout">Timeout for capturing screen (seconds)</string>
    <string name="pref_title_enable_unrecommended_lang_items">Display unrecommended languages options</string>
    <string name="pref_title_remove_end_dash">Remove ending dashes</string>
    <string name="pref_summary_remove_end_dash">Remove dash symbols in the end of lines</string>
    <string name="pref_summary_unrecommended_items_will_show_in_red">Unrecommended options will show in red</string>
    <string name="pref_title_remove_line_breaks_in_block">Remove line breakers inside text blocks</string>
    <string name="pref_summary_remove_line_breaks_in_block">Avoid paragraph breaks by line breakers</string>
    <string name="pref_bypass_battery_optimization">Bypass battery optimization</string>
    <string name="pref_summary_bypass_battery_optimization">EverTranslator needs [Bypass Battery Optimization] to avoid being killed in the background.</string>
    <string name="pref_title_remove_spaces_in_cjk">Remove spaces in Chinese, Japanese and Korean text</string>
    <string name="pref_summary_remove_spaces_in_cjk">Remove spaces while the ORC language is Chinese, Japanese or Korean</string>
    <string name="pref_category_translation">Translation</string>
    <string name="pref_summary_mymemory_email">You can Provide a valid email to MyMemory translation for 50000 chars a day quota.\nEverTranslator will never use the email for other usages.</string>
    <string name="pref_title_mymemory_email">MyMemory email</string>
    <string name="pref_screenshot">Screenshot</string>
    <string name="pref_summary_on_keep_media_projection_resources">Keep the resources until restart</string>
    <string name="pref_summary_off_keep_media_projection_resources">Release the resources after used</string>
    <string name="pref_title_keep_media_projection_resources">Keep MediaProjection resources</string>
    <string name="pref_limit_result_view_max_width">Limit the max width</string>
    <string name="pref_summary_on_limit_result_view_max_width">Limit the max width to 300dp</string>
    <string name="pref_summary_off_limit_result_view_max_width">Dynamic width based on the content</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="menu_version_history">Version History</string>
    <string name="menu_readme">Readme</string>
    <string name="menu_hide">Hide</string>
    <string name="menu_exit">Exit</string>

    <string name="text_ocr_language">OCR language</string>
    <string name="text_translation">Translation</string>
    <string name="text_field_provider">Provider:</string>
    <string name="text_field_language">Language:</string>
    <string name="text_close">Close</string>
    <string name="text_ocr_text">OCR Text</string>
    <string name="text_translated_text">Translated Text</string>
    <string name="text_translated_by">translated by</string>
    <string name="msg_models_to_download">The following language resources are not downloaded, do you want to download them now?</string>
    <string name="msg_wait_for_resources_downloading">The following resources is downloading, please wait.</string>
    <string name="msg_resouces_downloaded">Resources downloaded, please click OK to continue.</string>
    <string name="msg_select_lang_in_translate_app">Select the translation language in [%s]</string>
    <string name="msg_ocr_only_mode_hint">Translation language selection is not available for OCR only mode</string>
    <string name="text_request_permission">Request permission</string>
    <string name="text_open_in_browser">Open in Browser</string>
    <string name="text_all_text" translatable="false">[All]</string>

    <string name="msg_evertranslator_needs_display_over_other_apps_permission_to_show_a_floating_window_for_easily_using">EverTranslator needs the [Display over other apps] permission to show a floating window on the screen.</string>
    <string name="msg_evertranslator_needs_capture_screen_to_find_the_text_from_the_screen_for_you">EverTranslator needs the [Capture Screen] permission to find the text from the screen for you.</string>
    <string name="msg_textHasBeenCopied">Text [%s] has been copied.</string>
    <string name="msg_click_to_show_the_floating_bar">Click to show the floating bar</string>
    <string name="msg_click_to_hide_the_floating_bar">Click to hide the floating bar</string>
    <string name="msg_recreate_selection_area">Drag here to recreate a translation area, pinch in/out to zoom the selected area</string>
    <string name="msg_create_selection_area">Drag here to create a translation area</string>
    <string name="msg_image_reader_format_unmatched">Found temporary error, please try it again. (Image reader format)</string>
    <string name="msg_translator_provider_does_not_support_the_ocr_lang">This translation provider does not support the selected recognition language.</string>
    <string name="msg_please_restart_the_app_to_take_effect">Please restart the app to take effect</string>
    <string name="msg_grant_posting_notification_permission_rationale">Grant posting notification permission to restore/hide the app easier</string>
    <string name="btn_request_again">Request Again</string>

    <string name="title_version_history">Version History</string>
    <string name="title_error">Error</string>
    <string name="title_guide">How to use</string>
    <string name="title_failed_to_check_resources">Failed to check resources</string>
    <string name="title_download">Download</string>
    <string name="title_resources_downloading">Resources downloading</string>
    <string name="title_resouces_downloaded">Resources downloaded</string>
    <string name="title_downloading_resouces_failed">Downloading resources failed</string>
    <string name="title_result_window_font_size_adjuster">Adjust font size</string>

    <string name="error_an_unknown_error_found_while_recognition_text">An unknown error found while recognizing text</string>
    <string name="error_capture_screen_timeout">Capturing screen failed: timeout, please try it again later</string>
    <string name="error_unknown_error_capturing_screen">An unknown error found while capturing screen</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_translator_app_is_not_found">The [%s] is not found on your device, this provider depends on the app, please click the OK button to install it on PlayStore or change to another translation provider.</string>
    <string name="error_no_translator_app_is_not_found">You need to install any other supported translate app to use this provider, please install any other translation app from any store or use other provider instead</string>
    <string name="error_selected_area_too_small">The selected area is too small, please enlarge it.</string>
    <string name="error_microsoft_translation_out_of_quota">Sorry, the quota of the Microsoft Azure translate is running out.\n\nIt will be reset the next month, please use another translation provider.\n\n(%1$s/%2$s)</string>
    <string name="error_can_not_connect_to_translation_server">Can not connect to the translation server, please check your internet connection</string>

    <string-array name="textBlockJoinersNames">
        <item>Line-breaker</item>
        <item>Space</item>
        <item>None</item>
    </string-array>
    <string-array name="textBlockJoinersValues" translatable="false">
        <item>LineBreaker</item>
        <item>Space</item>
        <item>None</item>
    </string-array>
</resources>
